doc : complete the design document

--- a/docs/总体设计文档.md
+++ b/docs/总体设计文档.md
@@ -3,6 +3,27 @@
 ## 概述
 本项目旨在实现一个书店系统，该书店系统能够面向顾客、工作员、店长提供书籍的进货、购买、查看等功能，使用命令行进行交互
 
+## 代码架构
+```
+/Bookstore
+├── CMakeLists.txt          // CMake 配置文件
+├── main.cpp                // 程序入口
+├── data/                   // 存放生成的 .dat 文件
+├── include/
+│   ├── config.hpp          // 全局配置 
+│   ├── utils.hpp           // 异常类
+│   ├── models.hpp          // 数据模型 
+│   ├── file_io.hpp         // 文件读写封装
+│   ├── journal.hpp         // 容错日志
+│   ├── managers.hpp        // 管理类
+│   ├── unrollindex.hpp     // UnrolledIndex (模板类)
+│   └── commands.hpp        // Command 基类和所有指令类声明
+└── src/
+    ├── commands.cpp        // 各个指令 execute() 的实现
+    ├── managers.cpp        // Manager 中复杂逻辑的实现
+    └── models.cpp          // 各种数据模型的构造、析构函数
+```
+
 ## 系统架构设计
 本项目的架构可以简单概括为三层：交互层、逻辑处理层、数据层
 
@@ -89,6 +110,7 @@ public:
 
 
 ### Command类
+作为命令类的父类
 ```
 class Command {
 protected:
@@ -123,64 +145,6 @@ class ReportFinance : public Command //展示财务报表
 class ReportEmployee : public Command //展示员工工作表
 ```
 
-### UserManager
-```
-class UserManager {
-private: 
-  std::vector<Session> log_stack_; //登录栈的管理
-  MemoryRiver<User> user_list_; //记录账户信息
-  UnrollIndex<FixedString<30>, int> id_user_; //账户id检索
-public:
-  UserManager();
-  const Session GetTopSession();
-  User GetUser(size_t);
-  SystemLog Login(std::string, std::string = ""); //登入
-  SystemLog Logout(); //登出
-  SystemLog Register(std::string, std::string, std::string); //注册账户
-  SystemLog UserAdd(std::string, std::string, int, std::string);//添加账户
-  SystemLog Passwd(std::string, std::string, std::string = "");//修改密码
-  SystemLog Delete(std::string);//删除账户
-  void SelectBook(size_t);//账户选择书籍
-};
-```
-
-### BookManager
-```
-class BookManager {
-private:
-  MemoryRiver<Book> book_list_; //记录书籍信息
-  UnrollIndex<FixedString<20>, int> isbn_book_; //isbn检索书籍
-  UnrollIndex<FixedString<60>, int> name_book_; //书名检索书籍
-  UnrollIndex<FixedString<60>, int> author_book_; //作者检索书籍
-  UnrollIndex<FixedString<60>, int> key_book_; //关键词检索书籍
-public:
-  BookManager();
-  const Book GetBook(size_t); //提供对应book_list位置记录的信息
-  int UnrollIsbn(std::string); //检索isbn，若没有则创建该isbn的书籍
-  SystemLog Buy(std::string, int); //购买 
-  SystemLog Modify(size_t, const std::string []); //修改信息
-  SystemLog Import(size_t, int); //进货
-  void Show(const std::string []); //展示检索信息
-};
-```
-
-### LogManager
-```
-class LogManager {
-private:
-  MemoryRiver<FinancialLog> finance_log_;
-  MemoryRiver<SystemLog> system_log;
-public:
-  LogManager();
-  void ShowFinance(int = -1);
-  void ReportFinance();
-  void PrintStaff();
-  void PrintLog();
-  void AddFinancialLog(double);
-  void AddSystemLog(SystemLog &);
-};
-```
-
 ### Book
 书籍信息记录
 ```
@@ -205,8 +169,15 @@ struct User {
   char userid_[31];
   char password_[31];
   char username_[31];
-  User() = default;
-  User(const char *, const char *, const char *, const int);
+};
+```
+
+### Sessioin
+登录栈的数据单位，存储了用户和用于选中的书籍的编号（若没有选中则为-1）；其中编号指的是该对象在相应的数据表中存储的位置
+```
+struct Session {
+  size_t index_user_;
+  size_t index_book_ = -1;
 };
 ```
 
@@ -246,6 +217,158 @@ struct FinanceLog {
 void Insert(const Key &key, const Value &value);
 bool Delete(const Key &key, const Value &value);
 ```
+
+### UserManager
+管理账户的类，存储的信息如下）；以下所说的**账户编号**均为账户在**user_list_**的存储位置
+```
+std::vector<Session> log_stack_; //登录栈的管理
+MemoryRiver<User> user_list_; //记录账户信息
+UnrollIndex<FixedString<30>, int> id_user_; //账户id检索
+```
+提供以下接口
+```
+GetTopSession();
+```
+用于读取当前登录栈的栈顶
+```
+GetUser(size_t);
+```
+* 输入：数据表中的位置
+* 输出：调取数据表
+* 输出： 返回数据表中相应位置的账户数据
+```
+Login(std::string, std::string = ""); 
+```
+* 输入：接受一个用户id，和一个密码（可以没有）
+* 过程：执行登入操作，若登入失败抛出异常
+* 输出：相关日志
+```
+Logout(); //登出
+```
+* 输入：无
+* 执行：登出登录栈栈顶，若当前无账户（或是游客账户）则抛出异常
+* 输出：相关日志
+```
+Register(std::string, std::string, std::string); //注册账户
+```
+* 输入：用户id，密码，用户名
+* 执行：接受一个，创建对应的顾客账户，分别在**user_list_, id_user_**中进行添加；若该id已经被使用则抛出异常
+* 输出：相关日志
+```
+UserAdd(std::string, std::string, int, std::string);//添加账户
+```
+* 输入：用户id，密码，权限等级，用户名
+* 执行：创建相应账户，分别在**user_list_, id_user_**中进行添加；若该id已经被使用则抛出异常
+* 输出：相关日志
+```
+Passwd(std::string, std::string, std::string = "");//修改密码
+```
+* 输入：用户id，新密码，旧密码（可无）
+* 执行：判断旧密码是否正确；若正确修改密码，若错误抛出异常
+* 输出：相关日志
+```
+Delete(std::string);//删除账户
+```
+* 输入：用户id
+* 执行：删除该账户，分别在**user_list_, id_user_**中进行删除
+* 输出：相关日志
+```
+void SelectBook(size_t);//账户选择书籍
+```
+* 输入：书籍编号
+* 执行：在登录栈中修改当前账户所选书籍编号
+* 输出：相关日志
+
+### BookManager
+管理书籍的类，存储的信息如下；文档中所说的**书籍编号**均指书籍在**book_list_**中存储的位置
+```
+MemoryRiver<Book> book_list_; //记录书籍信息
+UnrollIndex<FixedString<20>, int> isbn_book_; //isbn检索书籍
+UnrollIndex<FixedString<60>, int> name_book_; //书名检索书籍
+UnrollIndex<FixedString<60>, int> author_book_; //作者检索书籍
+UnrollIndex<FixedString<60>, int> key_book_; //关键词检索书籍
+```
+提供以下接口：
+```
+GetBook(size_t); //提供对应book_list位置记录的信息
+```
+* 输入：数据表中的位置
+* 执行：调取数据表
+* 输出：返回数据表中相应位置的书籍数据
+```
+UnrollIsbn(std::string); //检索isbn，若没有则创建该isbn的书籍
+```
+* 输入：书籍isbn
+* 执行：检索isbn；若有则返回，若无则创建一个该isbn对应的书籍
+* 输出：返回书籍编号
+```
+Buy(std::string, int); //购买 
+```
+* 输入：书籍isbn，购买数量
+* 执行：检索isbn，若有则减少书籍库存， 若无则抛出异常
+* 输出：相关日志
+```
+Modify(size_t, const std::string []); //修改信息
+```
+* 输入：书籍编号，修改信息
+* 执行：在数据表中取出数据，根据修改信息进行修改后再写入，同时修改检索表
+* 输出：相关日志
+```
+Import(size_t, int); //进货
+```
+* 输入：书籍编号， 进货数量
+* 执行：再数据表中取出数据，修改库存数量再写入
+* 输出：相关日志
+```
+Show(const std::string []); //展示检索信息
+```
+* 输入：检索内容
+* 执行：查找检索表
+* 输出：书籍信息
+
+### LogManager
+管理日志的类，存储的信息如下
+```
+MemoryRiver<FinancialLog> finance_log_;//财务日志
+MemoryRiver<SystemLog> system_log;//系统日志
+```
+提供以下接口
+```
+ShowFinance(int = -1);
+```
+* 输入：查看的交易总额的笔数
+* 执行：查看财务账单的数据
+* 输出：交易总额
+```
+ReportFinance();
+```
+* 输入：无
+* 执行：检索系统日志，取出财务相关内容
+* 输出：财务报表
+```
+PrintStaff();
+```
+* 输入：无
+* 执行：检索系统日志，取出员工操作的相关内容
+* 输出：员工工作表
+```
+PrintLog();
+```
+* 输入：无
+* 执行：检索系统日志
+* 输出：系统日志
+```
+AddFinancialLog(double);
+```
+* 输入：交易金额（收入为正，支出为负）
+* 执行：增加财务账单
+* 输出：无
+```
+AddSystemLog(SystemLog &);
+```
+* 输入：系统日志
+* 执行：增添系统日志
+* 输出：无
 
 
 
