fix : reconstruct code

--- a/docs/总体设计文档.md
+++ b/docs/总体设计文档.md
@@ -1,5 +1,8 @@
 # 总体设计文档
 
+## 项目名称：书店系统
+## 作者：谢家烨
+
 ## 概述
 本项目旨在实现一个书店系统，该书店系统能够面向顾客、工作员、店长提供书籍的进货、购买、查看等功能，使用命令行进行交互
 
@@ -108,6 +111,8 @@ public:
 };
 ```
 
+### Expect类
+用于验证合法性（以及拿bonus）的类，可以使用以下判断条件
 
 ### Command类
 作为命令类的父类
