fix : add cache flush

--- a/docs/总体设计文档.md
+++ b/docs/总体设计文档.md
@@ -13,14 +13,17 @@
 ├── main.cpp                // 程序入口
 ├── data/                   // 存放生成的 .dat 文件
 ├── include/
-│   ├── config.hpp          // 全局配置 
-│   ├── utils.hpp           // 异常类
-│   ├── models.hpp          // 数据模型 
-│   ├── file_io.hpp         // 文件读写封装
-│   ├── journal.hpp         // 容错日志
-│   ├── managers.hpp        // 管理类
-│   ├── unrollindex.hpp     // UnrolledIndex (模板类)
-│   └── commands.hpp        // Command 基类和所有指令类声明
+│   ├── core
+│   │   ├── commands.hpp    // Command 基类和所有指令类声明
+│   │   ├── managers.hpp    // 管理类
+│   │   ├── models.hpp      // 数据模型 
+│   │   └── unrollindex.hpp // 分块链表检索
+│   ├── file_io
+│   │   ├── cache.hpp       // 缓存
+│   │   ├── journal.hpp     // 容错日志
+│   │   └── memoryriver.hpp // 文件读写封装
+│   ├── config.hpp          // 全局配置
+│   └── utils.hpp           // 异常类
 └── src/
     ├── commands.cpp        // 各个指令 execute() 的实现
     ├── managers.cpp        // Manager 中复杂逻辑的实现
