docs : add the filsystem in design document

--- a/docs/总体设计文档.md
+++ b/docs/总体设计文档.md
@@ -83,6 +83,7 @@ end
   * **model.cpp** : 定义了User、Book、SystemLog、FinanceLog等结构体，明确了各种数据的存储形式;
   * **file_io.hpp & cache.hpp** : 实现了具有缓存、空间回收的文件读取、修改、写入gongneng
   * **unrollindex.hpp**：使用分块链表的算法实现了**User、Book**等数据的部分信息检索整体信息的映射功能
+  * **JournalManager**:用于实现容错的类，记录了数据提交的信息，用于恢复
 
 ## 模块详细设计
 
@@ -242,8 +243,14 @@ GetTopSession();
 GetUser(size_t);
 ```
 * 输入：数据表中的位置
-* 输出：调取数据表
+* 过程：调取数据表
 * 输出： 返回数据表中相应位置的账户数据
+```
+GetUser(std::string);
+```
+* 输入：id
+* 过程：检索id，调取数据表
+* 输出： 返回对应id的账户数据
 ```
 Login(std::string, std::string = ""); 
 ```
@@ -354,9 +361,9 @@ ReportFinance();
 * 执行：检索系统日志，取出财务相关内容
 * 输出：财务报表
 ```
-PrintStaff();
+PrintStaff(UserManager);
 ```
-* 输入：无
+* 输入：用户管理类，方便通过日志中的id对应的用户信息
 * 执行：检索系统日志，取出员工操作的相关内容
 * 输出：员工工作表
 ```
@@ -378,6 +385,49 @@ AddSystemLog(SystemLog &);
 * 执行：增添系统日志
 * 输出：无
 
+
+### JournalManager
+本类用于实现容错机制，旨在通过日志（不同于LogManager管理的日志）记录数据的提交和记录，在每次系统启动时检查日志文件，通过日志的内容可以判断该数据是否遭到损坏。
+```
+enum OpType {READY, WRITE, FINISH};
+struct JournalHeader {
+  OpType type;
+  int fileID;
+  int offset;
+  int data_size;
+};
+```
+日志头，用于记录日志信息
+* **type**:记录日志的类别，分为**READY, WRITE, FINISH**，代表日志提交的不同阶段，每个指令提交的日志应该至少由一个**READY**开头，一个**FINISH**结尾，代表指令执行的开始和结束。
+* **fileID**：当**type**为**WRITE**时，fileID代表该数据提交的文件编号，文件编号在对应**MemoryRiver**实例初始化时决定，由于初始化顺序时固定的，所以文件标号时固定的。
+* **offset**：相应数据在文件的offset
+* **data_size**：对应数据的长度
+
+```
+std::vector<rawWrite> file_map_;
+std::vector<reFresh> fresh_list_;
+```
+记录了各个MemoryRiver实例的回调函数，分别用于在恢复数据的时候进行数据写回和重新整理文件信息
+```
+void AddLog(const JournalHeader &, const char *);
+```
+在文件日志中写入文件头和数据（如果不是**WRITE**则传入**nullptr**）
+```
+int Init(rawWrite, reFresh);
+```
+被各个MemoryRiver实例调用，提供其回调函数
+
+```
+void Ready();
+void Write(int, int, int, const char *data);
+void Finish();
+```
+分别是三个指令执行阶段进行日志提交，调用**AddLog**
+其中**Write**输入文件编号、offset、数据长度以及数据在内存的地址
+```
+void Recover();
+```
+恢复函数，每次在程序开始时被调用，用于通过日志信息恢复数据以及数据是否被破坏
 
 
 
