docs : fix some small err

--- a/docs/总体设计文档.md
+++ b/docs/总体设计文档.md
@@ -11,7 +11,7 @@
 /Bookstore
 ├── CMakeLists.txt          // CMake 配置文件
 ├── main.cpp                // 程序入口
-├── data/                   // 存放生成的 .dat 文件
+├── data/                   // 存放生成的数据文件
 ├── include/
 │   ├── core
 │   │   ├── commands.hpp    // Command 基类和所有指令类声明
@@ -88,7 +88,7 @@ end
 ## 模块详细设计
 
 ### config
-在config.hpp中定义了写需要使用的常数
+在config.hpp中定义了些需要使用的常数
 ```
 //权限等级
 constexpr int VISITOR = 0;
@@ -158,15 +158,13 @@ class ReportEmployee : public Command //展示员工工作表
 书籍信息记录
 ```
 struct Book {
-  char isbn_[21];
-  char bookname_[61];
-  char author_[61];
-  char keyword_[61];
-  int quantity_ = 0;
-  double price_ = 0;
-  double total_cast_ = 0;
-  Book() = default;
-  Book(const char *);
+  char isbn_[21];            //书籍编号
+  char bookname_[61];        //书名
+  char author_[61];          //作者名
+  char keyword_[61];         //关键字
+  int quantity_ = 0;         //库存
+  double price_ = 0;         //单价
+  double total_cast_ = 0;    //交易总额
 };
 ```
 
@@ -174,10 +172,10 @@ struct Book {
 用户信息记录
 ```
 struct User {
-  int privilege_ = 0;
-  char userid_[31];
-  char password_[31];
-  char username_[31];
+  int privilege_ = 0;    //权限等级
+  char userid_[31];      //用户id
+  char password_[31];    //密码
+  char username_[31];    //用户名
 };
 ```
 
@@ -196,12 +194,12 @@ struct Session {
 struct SystemLog {
   SystemLog(const char *, const char *, const char *, int, double, const char *);
   SystemLog() = default;
-  char userid_[31];
-  char action_[30];
-  char target_[31];
-  int quantity_ = 0;
+  char userid_[31];             //操作者id
+  char action_[30];             //行为
+  char target_[31];             //目标对象
+  int quantity_ = 0; 
   double total_amount_ = 0;
-  char info_[120];
+  char info_[120];             //详细信息
 };
 ```
 
